--- a/OutliersAPP.SPA/src/app/nav/nav.component.html
+++ b/OutliersAPP.SPA/src/app/nav/nav.component.html
@@ -232,13 +232,13 @@
           </ul>
         </li>
         <li class="sub-menu">
-          <a [routerLink]="['/members/chat']">
+          <a [routerLink]="['/chatroom']" >
             <i class="fa fa-comments-o"></i>
             <span>Chat Room</span>
             </a>
           <ul class="sub">
             <li><a href="#">Lobby</a></li>
-            <li><a href="#"> Chat Room</a></li>
+            <li><a  [routerLink]="['/chatroom']"> Chat Room</a></li>
           </ul>
         </li>
 
