--- a/OutliersAPP.SPA/src/app/members/member-messages/member-messages.component.html
+++ b/OutliersAPP.SPA/src/app/members/member-messages/member-messages.component.html
@@ -1,6 +1,4 @@
 <section style="text-align: left;">
-  <div style="font-weight:bold;font-family:'Tajawal';font-size:1.2rem;" *ngIf="messages?.length === 0">
-Say Hi   </div>
   <section class="wrapper site-min-height">
 
     <div class="chat-room mt">
@@ -28,8 +26,8 @@ Say Hi   </div>
                   <img  style="border-radius: 50%;" src="{{message.senderPhotoUrl}}" alt="{{message.senderKnownAs}}" class="rounded-circle">
                 </span>
                 {{message.senderKnownAs}}</strong> </div>
-            <div class="second-part"> <strong>{{message.content}}</strong> <strong *ngIf="!message.isRead" class="text-danger align-middle">(غير مقروءة)</strong>
-              <strong *ngIf="message.isRead" class="text-warning align-middle">(مقروءة
+            <div class="second-part"> <strong>{{message.content}}</strong> <strong *ngIf="!message.isRead" class="text-danger align-middle">( Unread)</strong>
+              <strong *ngIf="message.isRead" class="text-warning align-middle">(seen
                   {{message.dateRead | timeAgo}})</strong> </div>
             <div class="third-part"><strong>{{message.messageSent | timeAgo}}</strong></div>
           </div>
