--- a/OutliersAPP.SPA/src/app/members/member-detail/member-detail.component.html
+++ b/OutliersAPP.SPA/src/app/members/member-detail/member-detail.component.html
@@ -3,7 +3,7 @@
     <section class="wrapper site-min-height">
       <div class="row mt">
         <div class="col-lg-12">
-          <div class="row content-panel">
+          <div class="row content-panel-img">
             <div class="col-md-4 profile-text mt mb centered">
               <div class="right-divider hidden-sm hidden-xs">
                 <h4>{{countfollwers}}</h4>
