--- a/OutliersAPP.SPA/src/app/members/member-edit/member-edit.component.html
+++ b/OutliersAPP.SPA/src/app/members/member-edit/member-edit.component.html
@@ -3,7 +3,7 @@
     <section class="wrapper site-min-height">
       <div class="row mt">
         <div class="col-lg-12">
-          <div class="row content-panel">
+          <div class="row content-panel-img">
             <div class="col-md-4 profile-text mt mb centered">
               <div class="right-divider hidden-sm hidden-xs">
                 <h4>{{countfollwers}}</h4>
@@ -48,17 +48,9 @@
                 <!-- /tab-pane -->
                 <div id="photo" class="tab-pane">
                   <div class="row">
-                    <div class="col-md-6">
-                      <div id="map"></div>
-                    </div>
-                    <!-- /col-md-6 -->
-                    <div class="col-md-6 detailed">
-                      <h4>My Picture</h4>
-                      <div class="col-md-12 col-md-offset-2 mt">
-                        <app-photo-editor (getMemberPhotoChange)="updateMainPhoto($event)" [photos]="user.photos">
-                        </app-photo-editor>
-                      </div>
-
+                    <div class="col-md-9">
+                      <app-photo-editor (getMemberPhotoChange)="updateMainPhoto($event)" [photos]="user.photos">
+                      </app-photo-editor>
                     </div>
                     <!-- /col-md-6 -->
                   </div>
