--- a/OutliersAPP.SPA/src/app/members/member-profile/member-profile.component.html
+++ b/OutliersAPP.SPA/src/app/members/member-profile/member-profile.component.html
@@ -3,19 +3,21 @@
     <section class="wrapper site-min-height">
       <div class="row mt">
         <div class="col-lg-24">
-          <div class="row content-panel">
+          <div class="row content-panel-img ">
             <div class="col-md-4 profile-text mt mb centered">
               <div class="right-divider hidden-sm hidden-xs">
                 <h4>{{countfollwers}}</h4>
-             <a [routerLink]="['/lists']"><h6>FOLLOWING</h6></a>
+                <a [routerLink]="['/lists']">
+                  <h6>FOLLOWING</h6>
+                </a>
                 <h4><span>{{countfollwing}}</span></h4>
                 <h6>FOLLOWERS</h6>
               </div>
             </div>
             <div class="col-md-4 profile-text">
               <h3>{{user.userName}}</h3>
-              <h4>{{user.gender}}</h4>
-              <p>{{user.skills}}</p>
+              <!-- <h4>{{user.gender}}</h4> -->
+              <p>{{user.roleName}}</p>
               <br>
             </div>
             <!-- /col-md-4 -->
@@ -37,7 +39,7 @@
                   <a data-toggle="tab" href="#overview">Overview</a>
                 </li>
                 <li>
-                  <a data-toggle="tab" href="#contact" class="contact-map">Contact</a>
+                  <a data-toggle="tab" href="#contact">My Info</a>
                 </li>
                 <li>
                   <a data-toggle="tab" [routerLink]="['/member/edit']">Edit Profile</a>
@@ -56,13 +58,16 @@
                       </div>
                       <div class="col-md-12">
                         <!-- <div class="[ panel panel-default ] panel-google-plus"> -->
-                    <app-post-list></app-post-list>
+                        <app-post-list></app-post-list>
 
-                  </div>
-                  <!-- </div> -->
+                      </div>
+
+
+
+                      <!-- </div> -->
                     </div>
 
-                     
+
 
                     <div class="col-md-6 detailed">
                       <h4>User Stats</h4>
@@ -87,38 +92,11 @@
                       <h4>My Friends</h4>
                       <div class="row centered mb">
                         <ul class="my-friends">
+
+
                           <li>
-                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-01.jpg"></div>
-                          </li>
-                          <li>
-                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-02.jpg"></div>
-                          </li>
-                          <li>
-                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-03.jpg"></div>
-                          </li>
-                          <li>
-                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-04.jpg"></div>
-                          </li>
-                          <li>
-                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-05.jpg"></div>
-                          </li>
-                          <li>
-                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-06.jpg"></div>
-                          </li>
-                          <li>
-                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-07.jpg"></div>
-                          </li>
-                          <li>
-                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-08.jpg"></div>
-                          </li>
-                          <li>
-                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-09.jpg"></div>
-                          </li>
-                          <li>
-                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-10.jpg"></div>
-                          </li>
-                          <li>
-                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-11.jpg"></div>
+                            <div class="friends-pic"><img class="img-circle" width="35" height="35"
+                                src="img/friends/fr-11.jpg"></div>
                           </li>
                         </ul>
                         <div class="row mt">
@@ -131,81 +109,80 @@
                       <h4>Pending Tasks</h4>
                       <div class="row centered">
                         <div class="col-md-8 col-md-offset-2">
-                          <h5>Dashboard Update (40%)</h5>
-                          <div class="progress">
-                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                              <span class="sr-only">40% Complete (success)</span>
-                            </div>
-                          </div>
-                          <h5>Unanswered Messages (80%)</h5>
-                          <div class="progress">
-                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                              <span class="sr-only">80% Complete (success)</span>
-                            </div>
-                          </div>
-                          <h5>Product Review (60%)</h5>
-                          <div class="progress">
-                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                              <span class="sr-only">60% Complete (success)</span>
-                            </div>
-                          </div>
                           <h5>Friend Requests (90%)</h5>
                           <div class="progress">
-                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="40"
+                              aria-valuemin="0" aria-valuemax="100" style="width: 90%">
                               <span class="sr-only">90% Complete (success)</span>
                             </div>
                           </div>
                         </div>
-                        <!-- /col-md-8 -->
                       </div>
-                      <!-- /row -->
                     </div>
                   </div>
                 </div>
-                
+
+
+                <!-- /tab-pane -->
                 <div id="contact" class="tab-pane">
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="detailed postmergi">
-                        <div text-center>
-                          <h4> Posts </h4>
+                  <section id="main-content">
+                    <section class="wrapper site-min-height">
+                      <div style="width: 500px;">
+                        <div class="custom-box">
+                          <div class="servicetitle">
+                            <h4>Bio</h4>
+                            <hr>
+                          </div>
+                          <p style="text-align: left;">{{user.introduction}}.</p>
+
+                          <div class="servicetitle">
+                            <h4>My Skils</h4>
+                            <hr>
+                          </div>
+                          <p style="text-align: left;">{{user.skills}}.</p>
+                          <div class="servicetitle">
+                            <h4>Intrested Job</h4>
+                            <hr>
+                          </div>
+                          <p style="text-align: left;">{{user.intrestedjobe}}.</p>
+
+                          <div class="servicetitle">
+                            <h4>Looking For</h4>
+                            <hr>
+                          </div>
+                          <p style="text-align: left;">{{user.lookingFor}}.</p>
+
+                          <ul class="pricing">
+                            <li></li>
+                            <li>Phone : {{user.phoneNumber}}</li>
+                            <li>Country : {{user.country}}</li>
+                            <li>City : {{user.city}}</li>
+
+                          </ul>
+                          <a class="btn btn-theme" [routerLink]="['/member/edit']">Edit Info</a>
                         </div>
+                        <!-- end custombox -->
                       </div>
-                      <div class="col-md-12">
-                    <app-post-list></app-post-list>
+                      <!-- end col-4 -->
 
-                  </div>
-                    </div>
+                      <!-- end col-4 -->
 
-                    <div class="col-md-6 detailed">
-                      <h4>Location</h4>
-                      <div class="col-md-8 col-md-offset-2 mt">
-                        <p>
-                          {{user.country}}<br/> {{user.city}}<br/>
-                        </p>
-                        <br>
-                      </div>
-                      <h4>Contacts</h4>
-                      <div class="col-md-8 col-md-offset-2 mt">
-                        <p>
-                          Phone:{{user.phoneNumber}}<br/> Cell: {{user.phoneNumber}}<br/>
-                        </p>
-                        <br>
-                        <p>
-                          Email: hello@.com<br/> Skype: UseDashio<br/>
-                        </p>
-                      </div>
-                    </div>
-                
+                      <!-- end col-4 -->
+
+                      <!--  /row -->
+                    </section>
+                    <!-- /wrapper -->
+                  </section>
+                </div>
+                <!-- /col-md-6 -->
+              </div>
+              <!-- /row -->
+            </div>
+
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-  </div>
-  </div>
-  </div>
-  </div>
-  </section>
+
     </section>
   </section>
-
-
+</section>
