--- a/OutliersAPP.SPA/src/app/members/photo-editor/photo-editor.component.html
+++ b/OutliersAPP.SPA/src/app/members/photo-editor/photo-editor.component.html
@@ -1,97 +1,168 @@
-<div class="row">
-    <div class="ml-12 img-wrapper" *ngFor="let photo of photos">
-        <img src="{{photo.url}}" class="img-thumbnail" [ngClass]="!photo.isApproved && 'not-approved'" alt="">
-        <div class="text-center img-text" *ngIf="!photo.isApproved">
-            <span class="text-danger">بإنتظار الموافقة</span>
-        </div>
-        <div class="row text-center mb-4" style="margin-right:2px;margin-top:-3px;">
-            <button type="button" (click)="setMainPhoto(photo)" [disabled]="photo.isMain || !photo.isApproved"
-            [ngClass]="photo.isMain ? 'btn btn-sm btn-success btn-down' : 'btn btn-sm btn-outline-success btn-down' "
-            ><strong>أساسية</strong></button>
-            <button type="button"[disabled]="photo.isMain" (click)="delete(photo.id)" class="btn btn-sm btn-outline-danger btn-down"><i class="fa fa-trash-o"></i></button>
-        </div>
+<!-- <div class="row">
+  <div class="col-sm-2 text-center" *ngFor="let photo of photos">
+      <img src="{{photo.url}}" class="img-thumbnail" alt="">
+      <div class="row text-center" style="margin-right:2px;margin-top:-3px;">
+          <button type="button" (click)="setMainPhoto(photo)" [disabled]="photo.isMain"
+          [ngClass]="photo.isMain ? 'btn btn-sm btn-success btn-down' : 'btn btn-sm btn-outline-success btn-down' "
+          ><strong>أساسية</strong></button>
+          <button type="button"[disabled]="photo.isMain" (click)="delete(photo.id)" class="btn btn-sm btn-outline-danger btn-down"><i class="fa fa-trash-o"></i></button>
+      </div>
 
+  </div>
+</div> -->
+
+<section id="main-content">
+  <section class="wrapper site-min-height">
+    <h3><i class="fa fa-angle-right"></i> Gallery</h3>
+    <hr>
+    <div class="row mt">
+      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 desc" *ngFor="let photo of photos">
+        <div class="project-wrapper">
+          <div class="project">
+            <div class="photo-wrapper">
+              <div class="photo">
+                <a class="fancybox" href="{{photo.url}}"><img class="img-responsive" src="{{photo.url}}" alt=""></a>
+
+              </div>
+              <div class="overlay">fff</div>
+            </div>
+          </div>
+
+        </div>
+        <div style="margin-right:2px;margin-top:3px;">
+          <button style="width: 150px; margin-bottom: 1%;" type="button" (click)="setMainPhoto(photo)"
+            [disabled]="photo.isMain"
+            [ngClass]="photo.isMain ? 'btn btn-sm btn-success btn-down' : 'btn btn-sm btn-outline-success btn-down' "><strong
+              style="font-size:10px;font-family: Arial, Helvetica, sans-serif;">Click To Make a Main
+              Photo</strong></button>
+          <button type="button" [disabled]="photo.isMain" (click)="delete(photo.id)"
+            class="btn btn-sm btn-outline-danger btn-down"><i class="fa fa-trash-o"></i></button>
+        </div>
+      </div>
     </div>
+    <!-- /row -->
+
+    <!-- /row -->
+  </section>
+  <!-- /wrapper -->
+</section>
+
+<div class="row" style="display: none;">
+  <div class="col-sm-4 mt-5 Font-Kufi">
+    <h4 class="Font-Kufi">إختر الصور</h4>
+    <div ng2FileDrop [ngClass]="{'nv-file-over': hasBaseDropZoneOver}" (fileOver)="fileOverBase($event)"
+      [uploader]="uploader" [class.bg-warning]="hasBaseDropZoneOver" class="card mt-5 text-center p-3 my-drop-zone">
+      <i [class.text-danger]="hasBaseDropZoneOver" class="fa fa-upload fa-4x"></i>
+      <p>سحب و إفلات الصور</p>
+    </div>
+
+    <div class="btn-group-vertical">
+      <input [hidden]="true" #uploadMult type="file" ng2FileSelect [uploader]="uploader" multiple />
+      <button class="btn ajs-button btn-up" (click)="uploadMult.click();">
+        إختر صور متعددة
+      </button>
+
+      <input [hidden]="true" #uploadOne type="file" ng2FileSelect [uploader]="uploader" />
+      <button class="mt-1 btn ajs-button btn-down" (click)="uploadOne.click();">
+        إختر صورة واحدة
+      </button>
+    </div>
+
+  </div>
+
+
+
 </div>
 
 
-<div class="row">
-    <div class="col-sm-6 mt-6 text-center">
+<div class="container">
+  <div class="row it">
+    <div class="col-sm-offset-1 col-sm-10" id="one">
+      <p>
+        Please upload Your Photos.
+      </p><br>
+      <div id="uploader">
+        <div class="row uploadDoc">
+          <div class="col-sm-3">
 
-        <h4 class="Font-Kufi">إختر الصور</h4>
 
-        <div ng2FileDrop [ngClass]="{'nv-file-over': hasBaseDropZoneOver}" (fileOver)="fileOverBase($event)" [uploader]="uploader"
-            [class.bg-warning]="hasBaseDropZoneOver"  class="card mt-5 text-center p-3 my-drop-zone">
-            <i [class.text-danger]="hasBaseDropZoneOver" class="fa fa-upload fa-4x"></i>
-            <p>سحب و إفلات الصور</p>
-        </div>
- <div class="btn-group-vertical">
-    <input [hidden] ="true" #uploadMult type="file" ng2FileSelect [uploader]="uploader" multiple />
-    <button  class="btn ajs-button btn-up"  (click)="uploadMult.click();" >
-       إختر صور متعددة
-    </button>
 
-    <input [hidden] ="true" #uploadOne type="file" ng2FileSelect [uploader]="uploader" />
-    <button  class="mt-1 btn ajs-button btn-down"  (click)="uploadOne.click();" >
-        إختر صورة واحدة
-    </button>
- </div>
- </div>
 
-    <div *ngIf="uploader?.queue?.length" class="col-sm-8 mt-5 Font-Kufi" style="margin-bottom: 40px">
 
-        <h4 class="Font-Kufi">ملفات الصور</h4>
-        <p>عدد الصور: {{ uploader?.queue?.length }}</p>
+          </div><!-- col-3 -->
+          <div class="col-sm-8">
+            <div *ngIf="uploader?.queue?.length" class="col-sm-8 mt-5 Font-Kufi" style="margin-bottom: 40px">
+              <h4 class="Font-Kufi"> Photos Uploaded ..</h4>
+              <p>Number Of Photo: {{ uploader?.queue?.length }}</p>
 
-        <table class="table">
-            <thead>
-                <tr>
-                    <th width="50%">الإسم</th>
-                    <th>الحجم</th>
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th width="50%">Name</th>
+                    <th>Size</th>
                     <th colspan="3"></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr class="text-right" *ngFor="let item of uploader.queue">
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr class="text-right" *ngFor="let item of uploader.queue">
                     <td style="overflow: hidden;"><strong>{{ item?.file?.name }}</strong></td>
                     <td *ngIf="uploader.options.isHTML5" nowrap>{{ item?.file?.size/1024/1024 | number:'.2' }} MB</td>
 
                     <td nowrap>
-                        <button type="button" class="btn btn-success btn-sm btn-up mr-1" (click)="item.upload()" [disabled]="item.isReady || item.isUploading || item.isSuccess">
-                            <i class="fa fa-upload"></i> تحميل
-                        </button>
-                        <button type="button" class="btn btn-warning btn-sm mr-1 btn-up" (click)="item.cancel()" [disabled]="!item.isUploading">
-                            <i class="fa fa-ban"></i> إلغاء
-                        </button>
-                        <button type="button" class="btn btn-danger btn-sm mr-1 btn-up" (click)="item.remove()">
-                            <i class="fa fa-trash-o"></i> حذف
-                        </button>
+                      <button type="button" class="btn btn-success btn-sm btn-up mr-1" (click)="item.upload()"
+                        [disabled]="item.isReady || item.isUploading || item.isSuccess">
+                        <i class="fa fa-upload"></i> Upload
+                      </button>
+                      <button type="button" class="btn btn-warning btn-sm mr-1 btn-up" (click)="item.cancel()"
+                        [disabled]="!item.isUploading">
+                        <i class="fa fa-ban"></i> Cancel
+                      </button>
+                      <button type="button" class="btn btn-danger btn-sm mr-1 btn-up" (click)="item.remove()">
+                        <i class="fa fa-trash-o"></i> Delete
+                      </button>
                     </td>
-                </tr>
-            </tbody>
-        </table>
+                  </tr>
+                </tbody>
+              </table>
 
-        <div>
-            <div>
-               <p style="text-align: right;margin-right:20px;" class="mb-1">تقدم التحميل </p>
-                <div class="progress">
+              <div>
+                <div>
+                  <p style="text-align: right;margin-right:20px;" class="mb-1">Progress   </p>
+                  <div class="progress">
                     <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': uploader.progress + '%' }"></div>
+                  </div>
                 </div>
-            </div>
-            <div class="text-center p-3">
-                <button type="button" class="btn btn-success mr-1 " (click)="uploader.uploadAll()" [disabled]="!uploader.getNotUploadedItems().length">
-                    <i class="fa fa-upload"></i> تحميل الكل
-                </button>
-                <button type="button" class="btn btn-warning mr-1" (click)="uploader.cancelAll()" [disabled]="!uploader.isUploading">
-                    <i class="fa fa-ban"></i> إلغاء الكل
-                </button>
-                <button type="button" class="btn btn-danger mr-1" (click)="uploader.clearQueue()" [disabled]="!uploader.queue.length">
-                    <i class="fa fa-trash-o"></i> حذف الكل
-                </button>
-            </div>
+                <div class="text-center p-3">
+                  <button type="button" class="btn btn-success mr-1 " (click)="uploader.uploadAll()"
+                    [disabled]="!uploader.getNotUploadedItems().length">
+                    <i class="fa fa-upload"></i> Upload All
+                  </button>
+                  <button type="button" class="btn btn-warning mr-1" (click)="uploader.cancelAll()"
+                    [disabled]="!uploader.isUploading">
+                    <i class="fa fa-ban"></i> Cancel All
+                  </button>
+                  <button type="button" class="btn btn-danger mr-1" (click)="uploader.clearQueue()"
+                    [disabled]="!uploader.queue.length">
+                    <i class="fa fa-trash-o"></i>  Delete All
+                  </button>
+                </div>
 
+              </div>
+
+            </div>
+          </div>
+          <!--col-8-->
         </div>
-
+        <!--row-->
+      </div>
+      <!--uploader-->
+      <div class="text-center">
+        <a class="btn btn-new" (click)="uploadOne.click();" style="margin-right: 1%;width: 200px;"><i
+            class="fa fa-plus"></i> Uplaod One Photo </a>
+        <a class="btn btn-next" (click)="uploadMult.click();" style="width: 200px;"><i class="fa fa-plus"></i><i
+            class="fa fa-plus"></i> Uplaod Many Photo</a>
+      </div>
     </div>
-
-</div>
+    <!--one-->
+  </div><!-- row -->
+</div><!-- container -->
