--- a/OutliersAPP.SPA/src/app/nav/nav.component.html
+++ b/OutliersAPP.SPA/src/app/nav/nav.component.html
@@ -152,7 +152,7 @@
     </div>
     <div class="top-menu">
       <ul class="nav pull-right top-menu">
-        <li><a class="logout" (click)="loggedOut();">Logout</a></li>
+        <li><a style="cursor:  pointer;" class="logout" (click)="loggedOut();">Logout</a></li>
       </ul>
     </div>
   </header>
