--- a/OutliersAPP.SPA/src/app/members/member-home/member-home.component.html
+++ b/OutliersAPP.SPA/src/app/members/member-home/member-home.component.html
@@ -4,7 +4,7 @@
       <div class="col-md-4">
 
       </div>
-      <div class="col-md-4 gedf-main">
+      <div class="col-md-4 gedf-main mtop">
         <!--- \\\\\\\Post-->
 
         <form #PostForm="ngForm" (ngSubmit)="createpost();">
