--- a/OutliersAPP.SPA/src/app/members/member-home/member-home.component.css
+++ b/OutliersAPP.SPA/src/app/members/member-home/member-home.component.css
@@ -206,4 +206,7 @@ height: 0;
           padding: 10px 10px;
           margin: 10px 0;
         }
+        .mtop{
+          margin-top: 70px;
+        }
   
