--- a/OutliersAPP.SPA/src/app/nav/nav.component.html
+++ b/OutliersAPP.SPA/src/app/nav/nav.component.html
@@ -3,27 +3,30 @@
     <form (ngSubmit)="login()" #loginForm="ngForm" class="form-login" action="index.html">
       <h2 class="form-login-heading">sign in now</h2>
       <div class="login-wrap">
-        <input name="username" [(ngModel)]="model.username" type="text" class="form-control" placeholder="User Name" autofocus>
+        <input name="username" [(ngModel)]="model.username" type="text" class="form-control" placeholder="User Name"
+          autofocus>
         <br>
-        <input name="password"  [(ngModel)]="model.password" type="password" class="form-control" placeholder="Password">
+        <input name="password" [(ngModel)]="model.password" type="password" class="form-control" placeholder="Password">
         <label class="checkbox">
           <input type="checkbox" value="remember-me"> Remember me
           <span class="pull-right">
-          <a data-toggle="modal" href="login.html#myModal"> Forgot Password?</a>
+            <a data-toggle="modal" href="login.html#myModal"> Forgot Password?</a>
           </span>
-          </label>
-        <button class="btn btn-theme btn-block" href="index.html" type="submit"><i class="fa fa-lock"></i> SIGN IN</button>
+        </label>
+        <button class="btn btn-theme btn-block" href="index.html" type="submit"><i class="fa fa-lock"></i> SIGN
+          IN</button>
         <hr>
 
         <div class="registration">
-          Don't have an account yet?<br/>
+          Don't have an account yet?<br />
           <a class="" href="#">
             Create an account
-            </a>
+          </a>
         </div>
       </div>
       <!-- Modal -->
-      <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="myModal" class="modal fade">
+      <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="myModal"
+        class="modal fade">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
@@ -32,7 +35,8 @@
             </div>
             <div class="modal-body">
               <p>Enter your e-mail address below to reset your password.</p>
-              <input type="text" name="email" placeholder="Email" autocomplete="off" class="form-control placeholder-no-fix">
+              <input type="text" name="email" placeholder="Email" autocomplete="off"
+                class="form-control placeholder-no-fix">
             </div>
             <div class="modal-footer">
               <button data-dismiss="modal" class="btn btn-default" type="button">Cancel</button>
@@ -46,21 +50,17 @@
 </div>
 
 
-
-
 <section id="container c2" *ngIf="loggedIn()">
   <header class="header black-bg">
-    <div class="sidebar-toggle-box">
-      <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
-    </div>
-    <a href="index.html" class="logo"><b>OutLiers<span>Team</span></b></a>
+
+    <a routerLink="/" class="logo"><b>OutLiers<span>Team</span></b></a>
     <div class="nav notify-row" id="top_menu">
       <ul class="nav top-menu">
         <li class="dropdown">
           <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
             <i class="fa fa-tasks"></i>
             <span class="badge bg-theme">4</span>
-            </a>
+          </a>
           <ul class="dropdown-menu extended tasks-bar">
             <div class="notify-arrow notify-arrow-green"></div>
             <li>
@@ -70,14 +70,15 @@
 
             </li>
 
-                   <li>
+            <li>
               <a href="index.html#">
                 <div class="task-info">
                   <div class="desc">Payments Sent</div>
                   <div class="percent">70%</div>
                 </div>
                 <div class="progress progress-striped">
-                  <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+                  <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                    aria-valuemax="100" style="width: 70%">
                     <span class="sr-only">70% Complete (Important)</span>
                   </div>
                 </div>
@@ -88,44 +89,20 @@
             </li>
           </ul>
         </li>
-        <!-- settings end -->
-        <!-- inbox dropdown start  class="dropdown-toggle" data-toggle="dropdown" -->
+
         <li id="header_inbox_bar" class="dropdown">
           <a [routerLink]="['/messages']" routerLinkActive="active">
             <i class="fa fa-envelope-o"></i>
             <span *ngIf="count!=='0'" class="badge bg-theme">{{count}}</span>
-            </a>
-          <!-- <ul class="dropdown-menu extended inbox">
-            <div class="notify-arrow notify-arrow-green"></div>
-            <li>
-              <p class="green">You have 5 new messages</p>
-            </li>
-            <li>
-              <a href="index.html#">
-                <span class="photo"><img alt="avatar" src="img/ui-zac.jpg"></span>
-                <span class="subject">
-                <span class="from">Zac Snider</span>
-                <span class="time">Just now</span>
-                </span>
-                <span class="message">
-                Hi mate, how is everything?
-                </span>
-                </a>
-            </li>
+          </a>
 
-            <li>
-              <a href="index.html#">See all messages</a>
-            </li>
-          </ul> -->
         </li>
-        <!-- inbox dropdown end -->
 
-        <!-- notification dropdown start-->
         <li id="header_notification_bar" class="dropdown">
           <a data-toggle="dropdown" class="dropdown-toggle" href="#">
             <i class="fa fa-bell-o"></i>
             <span class="badge bg-warning">7</span>
-            </a>
+          </a>
           <ul class="dropdown-menu extended notification">
             <div class="notify-arrow notify-arrow-yellow"></div>
             <li>
@@ -136,7 +113,7 @@
                 <span class="label label-danger"><i class="fa fa-bolt"></i></span>
                 Server Overloaded.
                 <span class="small italic">4 mins.</span>
-                </a>
+              </a>
             </li>
 
 
@@ -146,20 +123,40 @@
             </li>
           </ul>
         </li>
-        <!-- notification dropdown end -->
       </ul>
-      <!--  notification end -->
     </div>
     <div class="top-menu">
       <ul class="nav pull-right top-menu">
-        <li><a style="cursor:  pointer;" class="logout" (click)="loggedOut();">Logout</a></li>
+        <li><a style="cursor:  pointer;" class="logout" [routerLink]="['/members/home']">Home</a></li>
+        <li style=" margin-top: 4%; cursor: pointer; outline: none;" [routerLink]="['/members/profile']" >
+          <img height="40px" 
+              src="{{photoUrl || 'assets/User.png'}}" class="avatar" alt="Avatar">Welcome 
+            {{ authService.currentUser?.userName || authService.decodedToken?.unique_name | titlecase }} <b
+             ></b>
+          <!-- <ul class="dropdown-menu">
+            <li><a href="#" class="dropdown-item"><i class="fa fa-user-o"></i> Profile</a></li>
+            <li><a href="#" class="dropdown-item"><i class="fa fa-calendar-o"></i> Calendar</a></li>
+            <li><a href="#" class="dropdown-item"><i class="fa fa-sliders"></i> Settings</a></li>
+            <li class="divider dropdown-divider"></li>
+            <li><a style="cursor:  pointer;" class="logout" (click)="loggedOut();">Logout</a></li>
+          </ul> -->
+        </li>
       </ul>
     </div>
   </header>
 
-  <aside>
+
+  <div class="parent2" style="margin-top: 4%;">
+    <div *hasRole="['Fresh Graduate'||'Professional']"  [routerLink]="['/members']"class="test1" style="cursor: pointer;"><i class="fa fa-user fa-2x"></i></div>
+    <div *hasRole="['Company']" [routerLink]="['/dashboard']" class="test2" style="cursor: pointer;"><i class="fa fa-dashboard fa-2x"></i></div>
+    <div  [routerLink]="['/members/profile']" class="test2" style="cursor: pointer;"><i class="fa fa-desktop fa-2x"></i></div>
+
+    <div *hasRole="['Fresh Graduate'||'Professional']" [routerLink]="['/jobs']"style="cursor: pointer;" class="test3"><i class="fa fa-sitemap fa-2x"></i></div>
+    <div *hasRole="['Fresh Graduate'||'Professional']" class="test4"><i class="fa fa-envelope-o fa-2x"></i></div>
+    <div class="mask2"><i class="fa fa-home fa-3x"></i></div>
+  </div>
+  <!-- <aside>
     <div id="sidebar" class="nav-collapse ">
-      <!-- sidebar menu start-->
       <ul class="sidebar-menu" id="nav-accordion">
         <p class="centered"><a href="#"><img src="{{photoUrl || 'assets/User.png'}}" class="img-circle" width="80"></a></p>
         <h5 class="centered">{{ authService.currentUser?.userName || authService.decodedToken?.unique_name | titlecase }}</h5>
@@ -244,6 +241,6 @@
 
       </ul>
     </div>
-  </aside>
+  </aside> -->
 
 </section>
