--- a/OutliersAPP.SPA/src/app/members/member-profile/member-profile.component.css
+++ b/OutliersAPP.SPA/src/app/members/member-profile/member-profile.component.css
@@ -186,5 +186,4 @@ body {
     margin-right: -40rem;
     margin-left: -55rem;
 }
-.content-panel-img {
-    background-image: url("/assets/img/fotis-fotopoulos-LJ9KY8pIH3E-unsplash.jpg");}
+.content-panel-img {background-image: url("/assets/img/fotis-fotopoulos-LJ9KY8pIH3E-unsplash.jpg");}
