--- a/OutliersAPP.SPA/src/app/jobs/job-edit/job-edit.component.html
+++ b/OutliersAPP.SPA/src/app/jobs/job-edit/job-edit.component.html
@@ -52,7 +52,7 @@
           <div class="dropDownSelect2"></div>
         </div>
       </div>
-        <div class="form cf">
+        <!-- <div class="form cf">
             <section class="payment-type cf">
                 <h2>Career Levels :</h2>
                 <input type="radio"  id="free" name="careerLevel" [(ngModel)]="job.careerLevel"><label class="free-label four col" for="free">Entry Level (fresh Graduate)</label>
@@ -69,7 +69,7 @@
 
               </section>
 
-          </div>
+          </div> -->
 
 
 
