--- a/OutliersAPP.SPA/src/app/members/photo-editor/photo-editor.component.html
+++ b/OutliersAPP.SPA/src/app/members/photo-editor/photo-editor.component.html
@@ -69,9 +69,6 @@
     </div>
 
   </div>
-
-
-
 </div>
 
 
@@ -165,4 +162,4 @@
     </div>
     <!--one-->
   </div><!-- row -->
-</div><!-- container -->
+</div>
