--- a/OutliersAPP.SPA/src/app/nav/nav.component.html
+++ b/OutliersAPP.SPA/src/app/nav/nav.component.html
@@ -185,10 +185,10 @@
       <div *hasRole="['Professional']" [routerLink]="['/jobs']" style="cursor: pointer;" class="test3">
         <i class="fa fa-sitemap fa-2x"></i></div>
 
-<<<<<<< HEAD
     <div *hasRole="['Fresh Graduate']" [routerLink]="['/Freshdashboard']" class="test4"><i class="fa fa-laptop fa-2x"
-=======
-        <!--Company-->
+        ></i>
+      </div>
+
         <div *hasRole="['Company']" [routerLink]="['/dashboard']" class="test2" style="cursor: pointer;"><i
           class="fa fa-dashboard fa-2x"></i></div>
         <!--Admin-->
@@ -196,8 +196,8 @@
           <i class="fa fa-sitemap fa-2x"></i></div>
 
       <div style="cursor: pointer;" [routerLink]="['/allcontacts']" *hasRole="['Admin']" class="test4"><i class="fa fa-laptop fa-2x"
->>>>>>> 7c371386e877814b0c4a16115214a0ef675b4e18
-        aria-hidden="true"></i></div>
+
+aria-hidden="true"></i></div>
 
     <div class="mask2"><i class="fa fa-home fa-3x"></i></div>
   </div>
@@ -290,4 +290,3 @@
     </div>
   </aside> -->
 
-</section>
