--- a/OutliersAPP.SPA/src/app/playlist/prof-dashboard/prof-dashboard.component.html
+++ b/OutliersAPP.SPA/src/app/playlist/prof-dashboard/prof-dashboard.component.html
@@ -17,7 +17,7 @@
                 <li><a [routerLink]="['/addvideo']"> <i class="fa fa-align-center"></i>Add New Video/s</a></li>
                 <li><a [routerLink]="['/contactus']"> <i class="fa fa-envelope"></i> Contact With Admin <span
                       class="label label-info pull-right inbox-notification">8</span></a></li>
-                <li><a> <i class="fa fa-exclamation-circle"></i> Important</a></li>
+                <li><a [routerLink]="['/msgfromadmin']"> <i class="fa fa-exclamation-circle"></i> Important</a></li>
 
 
               </ul>
@@ -56,7 +56,7 @@
                           Are You Sure Delete This Job ?
                         </div>
                         <div class="modal-footer">
-                          <button  type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                           <button onclick="reloadPage();" (click)="deleteplaylist(playlist.id)" type="button"
                             class="btn btn-primary">Delete</button>
                         </div>
@@ -65,14 +65,13 @@
                   </div>
                   <!--  -->
                   <tr>
-                    <td>
+                    <td style="cursor: pointer;outline: none;" [routerLink]="['/playlist/',playlist.id]">
                       <a [routerLink]="['/playlist/',playlist.id]">{{playlist.name}}</a>
                     </td>
                     <td class="hidden-phone">{{playlist.category}}</td>
-                    <td>{{playlist.description}} </td>
+                    <td ><div class="comment">{{playlist.description}}</div> </td>
                     <!-- <td><span class="label label-warning label-mini">Due</span></td> -->
                     <td>
-                      <button class="btn btn-success btn-xs"><i class="fa fa-check"></i></button>
                       <a [routerLink]="['/playlist/edit/',playlist.id]"><button class="btn btn-primary btn-xs"><i
                             class="fa fa-pencil"></i></button></a>
                       <a><button data-toggle="modal" data-target="#exampleModal" class="btn btn-danger btn-xs"><i
