--- a/OutliersAPP.SPA/src/app/Contacts/admin-allmessages/admin-allmessages.component.html
+++ b/OutliersAPP.SPA/src/app/Contacts/admin-allmessages/admin-allmessages.component.html
@@ -16,7 +16,7 @@
                     PlayList<span class="label label-theme pull-right inbox-notification">3</span></a></li>
                 <li><a [routerLink]="['/addplaylist']"> <i class="fa fa-inbox"></i> Add New PlayList <span
                       class="label label-theme pull-right inbox-notification">3</span></a></li>
-                <li><a [routerLink]="['/addvideo']"> <i class="fa fa-align-center"></i>Add New Video/s</a></li>
+                <!-- <li><a [routerLink]="['/addvideo']"> <i class="fa fa-align-center"></i>Add New Video/s</a></li> -->
                 <li><a [routerLink]="['/contactus']"> <i class="fa fa-envelope"></i> Contact With Admin <span
                       class="label label-info pull-right inbox-notification">8</span></a></li>
                 <li class="active"><a [routerLink]="['/msgfromadmin']"> <i class="fa fa-exclamation-circle"></i> Important</a></li>
