--- a/OutliersAPP.SPA/src/app/members/member-edit/member-edit.component.html
+++ b/OutliersAPP.SPA/src/app/members/member-edit/member-edit.component.html
@@ -69,16 +69,18 @@
                         </div>
 
                         <div class="form-group">
-                          <label class="col-lg-2 control-label">Information</label>
+                          <label class="col-lg-2 control-label">Information (Bio)</label>
                           <div class="col-lg-6">
+
                             <textarea id="c-name" class="form-control" name="introduction"
                               [(ngModel)]="user.introduction" class="form-control border-white"></textarea>
                           </div>
+
                         </div>
 
 
                         <div class="form-group">
-                          <label class="col-lg-2 control-label">looking For</label>
+                          <label class="col-lg-2 control-label">whats your Serch Job ?</label>
                           <div class="col-lg-6">
                             <textarea id="c-name" class="form-control" name="lookingFor" [(ngModel)]="user.lookingFor"
                               class="form-control border-white"></textarea>
@@ -88,8 +90,12 @@
                         <div class="form-group">
                           <label class="col-lg-2 control-label">Intrested Job</label>
                           <div class="col-lg-6">
-                            <textarea id="c-name" class="form-control" name="interests" [(ngModel)]="user.interests"
-                              class="form-control border-white"></textarea>
+
+                            <textarea id="c-name" class="form-control" name="intrestedJobe"
+                            [(ngModel)]="user.intrestedJobe" class="form-control border-white">
+                          </textarea>
+                       
+                              
                           </div>
                         </div>
 
@@ -101,6 +107,9 @@
                               class="form-control border-white"></textarea>
                           </div>
                         </div>
+
+
+
                         <div class="form-group">
                           <label class="col-lg-2 control-label">Lives In</label>
                           <div class="col-lg-6">
@@ -112,6 +121,7 @@
                             </div>
                           </div>
                         </div>
+
                         <div class="form-group">
                           <div class="col-lg-offset-2 col-lg-10">
                             <button form="editForm" [disabled]="!editForm.dirty" class="btn btn-theme"
@@ -119,6 +129,7 @@
                              <a [routerLink]="['/members/profile']"><button class="btn btn-theme04" type="button">Cancel</button></a>
                           </div>
                         </div>
+                        
                       </form>
                     </div>
                   </div>
